Started with dropdown menu

--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -5,6 +5,11 @@
         <div class="logo textLarge">
             F
         </div>
+        <button onclick="dropDownMenu" class="dropButton">
+            <div class="smallDivider"></div>
+            <div class="smallDivider"></div>
+            <div class="smallDivider"></div>
+        </button>
         <div class="allServices textMedium textDark">
             <a href="products.html" class="products">
                 Produkter
