--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,28 @@
         <div class="logo textLarge">
             F
         </div>
-        <div class="allServices textMedium textDark">
+        <div class="dropDown">
+            <button onclick="onDropDownButtonClick" class="dropButton">
+                <div class="smallDivider"></div>
+                <div class="smallDivider"></div>
+                <div class="smallDivider"></div>
+            </button>
+            <div class="dropDownMenu">
+                <a href="products.html" class="products textSmall">
+                    Produkter
+                </a>
+                <div class="smallishDivider"></div>
+                <a href="consultation.html" class="consultation textSmall">
+                    Konsultation
+                </a>
+                <div class="smallishDivider"></div>
+                <a href="flowergram.html" class="flowergram textSmall">
+                    Blommogram
+                </a>
+            </div>
+        </div>
+        
+        <!-- <div class="allServices textMedium textDark">
             <a href="products.html" class="products">
                 Produkter
             </a>
@@ -26,7 +47,7 @@
             <a href="flowergram.html" class="flowergram">
                 Blommogram
             </a>
-        </div>
+        </div> -->
     </header>
     <main>
         <div class="centerInfo textSmall">
