drop down button complete

--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -94,7 +94,7 @@
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
-                <div class="logo textLarge">
+                <div class="logo textMediumLarge">
                     F
                 </div>
             </div>
