--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -2,22 +2,36 @@
         <a href="index.html" class="title textLarge textLight">
             DELIKAT FLORA
         </a>
-        <div class="logo textLarge">
+        <div class="logo textMediumLarge">
             F
         </div>
-        <button onclick="dropDownMenu" class="dropButton">
-            <div class="smallDivider"></div>
-            <div class="smallDivider"></div>
-            <div class="smallDivider"></div>
-        </button>
-        <div class="allServices textMedium textDark">
-            <a href="products.html" class="products">
+        <div class="dropDown">
+            <button onclick="onDropDownButtonClick()" class="dropButton">
+                <div class="smallDivider"></div>
+                <div class="smallDivider"></div>
+                <div class="smallDivider"></div>
+            </button>
+            <div class="dropDownMenu">
+                <a href="products.html" class="products textSmall textLight">
+                    Produkter
+                </a>
+                <a href="consultation.html" class="consultation textSmall textLight">
+                    Konsultation
+                </a>
+                <a href="flowergram.html" class="flowergram textSmall textLight">
+                    Blommogram
+                </a>
+            </div>
+        </div>
+        
+        <div class="allServices textMedium">
+            <a href="products.html" class="products textDark">
                 Produkter
             </a>
-            <a href="consultation.html" class="consultation">
+            <a href="consultation.html" class="consultation textDark">
                 Konsultation
             </a>
-            <a href="flowergram.html" class="flowergram">
+            <a href="flowergram.html" class="flowergram textDark">
                 Blommogram
             </a>
         </div>
