--- a/website/index.html
+++ b/website/index.html
@@ -13,41 +13,39 @@
         <a href="index.html" class="title textLarge textLight">
             DELIKAT FLORA
         </a>
-        <div class="logo textLarge">
+        <div class="logo textMediumLarge">
             F
         </div>
         <div class="dropDown">
-            <button onclick="onDropDownButtonClick" class="dropButton">
+            <button onclick="onDropDownButtonClick()" class="dropButton">
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
             </button>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textSmall">
+                <a href="products.html" class="products textSmall textLight">
                     Produkter
                 </a>
-                <div class="smallishDivider"></div>
-                <a href="consultation.html" class="consultation textSmall">
+                <a href="consultation.html" class="consultation textSmall textLight">
                     Konsultation
                 </a>
-                <div class="smallishDivider"></div>
-                <a href="flowergram.html" class="flowergram textSmall">
+                <a href="flowergram.html" class="flowergram textSmall textLight">
                     Blommogram
                 </a>
             </div>
         </div>
         
-        <!-- <div class="allServices textMedium textDark">
-            <a href="products.html" class="products">
+        <div class="allServices textMedium">
+            <a href="products.html" class="products textDark">
                 Produkter
             </a>
-            <a href="consultation.html" class="consultation">
+            <a href="consultation.html" class="consultation textDark">
                 Konsultation
             </a>
-            <a href="flowergram.html" class="flowergram">
+            <a href="flowergram.html" class="flowergram textDark">
                 Blommogram
             </a>
-        </div> -->
+        </div>
     </header>
     <main>
         <div class="centerInfo textSmall">
@@ -151,12 +149,14 @@
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
-                <div class="logo textLarge">
+                <div class="logo textMediumLarge">
                     F
                 </div>
             </div>
         </footer>
     </main>
+        <script src="drop_down_button.js"></script>
+
 </body>
 
 </html>
