--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -1,7 +1,7 @@
-<footer class="textSmall textLight">
+<footer class="textSmall textLight fontInter">
             <div class="openingHoursInfo">
                 <table class="openingHoursTable">
-                    <thead class="textMedium">
+                    <thead class="textMedium fontProza fontBold">
                         <tr>
                             <th>
                                 Dag
@@ -73,14 +73,14 @@
             </div>
             <div class="divider"></div>
             <div class="aboutUsInfo">
-                <div class="textMedium">
+                <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
-                <div class="textMedium">
+                <div class="textMedium fontProza fontBold">
                     Kontaktinformation
                 </div>
                 <p>
@@ -94,7 +94,7 @@
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
-                <div class="logo textMediumLarge">
+                <div class="logo textMediumLarge textLogo">
                     F
                 </div>
             </div>
