--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -1,8 +1,8 @@
 <header>
-        <a href="index.html" class="title textLarge textLight">
+        <a href="index.html" class="title textLarge textLight fontLabrada">
             DELIKAT FLORA
         </a>
-        <div class="logo textMediumLarge">
+        <div class="logo textMediumLarge textLogo">
             F
         </div>
         <div class="dropDown">
@@ -12,26 +12,26 @@
                 <div class="smallDivider"></div>
             </button>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textSmall textLight">
+                <a href="products.html" class="products textSmall textLight fontInter">
                     Produkter
                 </a>
-                <a href="consultation.html" class="consultation textSmall textLight">
+                <a href="consultation.html" class="consultation textSmall textLight fontInter">
                     Konsultation
                 </a>
-                <a href="flowergram.html" class="flowergram textSmall textLight">
+                <a href="flowergram.html" class="flowergram textSmall textLight fontInter">
                     Blommogram
                 </a>
             </div>
         </div>
         
-        <div class="allServices textMedium">
-            <a href="products.html" class="products textDark">
+        <div class="allServices textMedium fontProza">
+            <a href="products.html" class="products textDark fontBold">
                 Produkter
             </a>
-            <a href="consultation.html" class="consultation textDark">
+            <a href="consultation.html" class="consultation textDark fontBold">
                 Konsultation
             </a>
-            <a href="flowergram.html" class="flowergram textDark">
+            <a href="flowergram.html" class="flowergram textDark fontBold">
                 Blommogram
             </a>
         </div>
