--- a/_templates/pages/about_us.html
+++ b/_templates/pages/about_us.html
@@ -11,7 +11,7 @@
 <body>
     !!!HEADER!!!
     <main>
-        <div class="centerInfo textSmall">
+        <div class="centerInfo textSmall fontInter">
             <div class="staffPage">
                 <div class="staffMember">
                     <img src="images/fredrik_ortqvist.jpg" alt="">
