--- a/_templates/pages/consultation.html
+++ b/_templates/pages/consultation.html
@@ -11,10 +11,10 @@
 <body>
     !!!HEADER!!!
     <main>
-        <div class="centerInfo textSmall">
+        <div class="centerInfo textSmall fontInter">
             <div class="servicesPage">
                 <div class="service">
-                    <div class="serviceName textMedium">
+                    <div class="serviceName textMedium fontProza fontBold">
                         Konsultation
                     </div>
                     <div class="priceTag">
