--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -11,17 +11,17 @@
 <body>
     !!!HEADER!!!
     <main>
-        <div class="centerInfo textSmall">
+        <div class="centerInfo textSmall fontInter">
             <div class="servicesPage">
                 <div class="service">
-                    <div class="serviceName textMedium">
+                    <div class="serviceName textMedium fontProza fontBold">
                         Blommogram
                     </div>
                     <img src="images/flowergram.jpg" alt="">
-                    <div class="sendFlowersText textMediumSmall">
+                    <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
-                    <div class="serviceDescription textSmall">
+                    <div class="serviceDescription textSmall fontInter">
                         Med vår blommogram-tjänst kan du enkelt överraska någon med vackra blommor, 
                         levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så 
                         sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
