--- a/_templates/pages/index.html
+++ b/_templates/pages/index.html
@@ -11,8 +11,8 @@
 <body>
     !!!HEADER!!!
     <main>
-        <div class="centerInfo textSmall">
-            <div class="welcomeMessage textLarge textDark">
+        <div class="centerInfo textSmall fontInter">
+            <div class="welcomeMessage textLarge textDark fontLabrada">
                 Välkommen till Delikat Flora!
             </div>
         </div>
