--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -11,7 +11,7 @@
 <body>
     !!!HEADER!!!
     <main>
-        <div class="centerInfo textSmall">
+        <div class="centerInfo textSmall fontInter">
             <div class="sortingOptions">
                 <label class="vatButton textExtraSmall">
                 Visa priser utan moms
