--- a/website/products.html
+++ b/website/products.html
@@ -10,10 +10,10 @@
 
 <body>
     <header>
-        <a href="index.html" class="title textLarge textLight">
+        <a href="index.html" class="title textLarge textLight fontLabrada">
             DELIKAT FLORA
         </a>
-        <div class="logo textMediumLarge">
+        <div class="logo textMediumLarge textLogo">
             F
         </div>
         <div class="dropDown">
@@ -23,32 +23,32 @@
                 <div class="smallDivider"></div>
             </button>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textSmall textLight">
+                <a href="products.html" class="products textSmall textLight fontInter">
                     Produkter
                 </a>
-                <a href="consultation.html" class="consultation textSmall textLight">
+                <a href="consultation.html" class="consultation textSmall textLight fontInter">
                     Konsultation
                 </a>
-                <a href="flowergram.html" class="flowergram textSmall textLight">
+                <a href="flowergram.html" class="flowergram textSmall textLight fontInter">
                     Blommogram
                 </a>
             </div>
         </div>
         
-        <div class="allServices textMedium">
-            <a href="products.html" class="products textDark">
+        <div class="allServices textMedium fontProza">
+            <a href="products.html" class="products textDark fontBold">
                 Produkter
             </a>
-            <a href="consultation.html" class="consultation textDark">
+            <a href="consultation.html" class="consultation textDark fontBold">
                 Konsultation
             </a>
-            <a href="flowergram.html" class="flowergram textDark">
+            <a href="flowergram.html" class="flowergram textDark fontBold">
                 Blommogram
             </a>
         </div>
     </header>
     <main>
-        <div class="centerInfo textSmall">
+        <div class="centerInfo textSmall fontInter">
             <div class="sortingOptions">
                 <label class="vatButton textExtraSmall">
                 Visa priser utan moms
@@ -136,10 +136,10 @@
                 </div>
             </div>
         </div>
-        <footer class="textSmall textLight">
+        <footer class="textSmall textLight fontInter">
             <div class="openingHoursInfo">
                 <table class="openingHoursTable">
-                    <thead class="textMedium">
+                    <thead class="textMedium fontProza fontBold">
                         <tr>
                             <th>
                                 Dag
@@ -211,14 +211,14 @@
             </div>
             <div class="divider"></div>
             <div class="aboutUsInfo">
-                <div class="textMedium">
+                <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
-                <div class="textMedium">
+                <div class="textMedium fontProza fontBold">
                     Kontaktinformation
                 </div>
                 <p>
@@ -232,7 +232,7 @@
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
-                <div class="logo textMediumLarge">
+                <div class="logo textMediumLarge textLogo">
                     F
                 </div>
             </div>
