--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -58,6 +58,11 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
+                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
+                    <div class="postalCodeOutput textSmall fontInter">
+                        
+                    </div>
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
                         Med vår blommogram-tjänst kan du enkelt överraska någon med vackra blommor, 
                         levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så 
@@ -170,7 +175,7 @@
         </footer>
     </main>
         <script src="drop_down_button.js"></script>
-
+        <script src="postal_code_check.js"></script>
 </body>
 
 </html>
