--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -21,7 +21,11 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
-                    
+                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
+                    <div class="postalCodeOutput textSmall fontInter">
+                        
+                    </div>
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
                         Med vår blommogram-tjänst kan du enkelt överraska någon med vackra blommor, 
                         levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så 
