--- a/website/consultation.html
+++ b/website/consultation.html
@@ -158,7 +158,7 @@
                     <a href="mailto:info@github.pages.io">info@github.pages.io</a>
                 </p>
                 <p>
-                    <a href="https://www.google.com/maps?q=Fjällgatan 32H 981 39 Finspång" target="_blank">
+                    <a href="https://www.google.com/maps?q=Fjällgatan_32H_981_39_Finspång" target="_blank">
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
@@ -168,7 +168,7 @@
             </div>
         </footer>
     </main>
-        <script src="drop_down_button.js"></script>
+    <script src="drop_down_button.js"></script>
 
 </body>
 
