--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -164,7 +164,7 @@
                     <a href="mailto:info@github.pages.io">info@github.pages.io</a>
                 </p>
                 <p>
-                    <a href="https://www.google.com/maps?q=Fjällgatan 32H 981 39 Finspång" target="_blank">
+                    <a href="https://www.google.com/maps?q=Fjällgatan_32H_981_39_Finspång" target="_blank">
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
@@ -174,8 +174,8 @@
             </div>
         </footer>
     </main>
-        <script src="drop_down_button.js"></script>
-        <script src="postal_code_check.js"></script>
+    <script src="drop_down_button.js"></script>
+
 </body>
 
 </html>
