--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -90,7 +90,7 @@
                     <a href="mailto:info@github.pages.io">info@github.pages.io</a>
                 </p>
                 <p>
-                    <a href="https://www.google.com/maps?q=Fjällgatan 32H 981 39 Finspång" target="_blank">
+                    <a href="https://www.google.com/maps?q=Fjällgatan_32H_981_39_Finspång" target="_blank">
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
