--- a/website/products.html
+++ b/website/products.html
@@ -228,7 +228,7 @@
                     <a href="mailto:info@github.pages.io">info@github.pages.io</a>
                 </p>
                 <p>
-                    <a href="https://www.google.com/maps?q=Fjällgatan 32H 981 39 Finspång" target="_blank">
+                    <a href="https://www.google.com/maps?q=Fjällgatan_32H_981_39_Finspång" target="_blank">
                         Fjällgatan 32H 981 39 Finspång
                     </a>
                 </p>
@@ -239,7 +239,7 @@
         </footer>
     </main>
     <script src="toggle_vat.js"></script>
-        <script src="drop_down_button.js"></script>
+    <script src="drop_down_button.js"></script>
 
 </body>
 </html>
