--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -174,6 +174,7 @@
             </div>
         </footer>
     </main>
+    <script src="postal_code_check.js"></script>
     <script src="drop_down_button.js"></script>
 
 </body>
