fixed dropdown button

--- a/website/index.html
+++ b/website/index.html
@@ -17,10 +17,12 @@
             F
         </div>
         <div class="dropDown">
-            <button onclick="onDropDownButtonClick()" class="dropButton">
+            <label class="dropDownLabel">
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
+                <button onclick="onDropDownButtonClick()" class="dropButton"></button>
+            </label>
             </button>
             <div class="dropDownMenu">
                 <a href="products.html" class="products textSmall textLight fontInter">
