hotfix for hotfix

--- a/website/products.html
+++ b/website/products.html
@@ -17,11 +17,12 @@
             F
         </div>
         <div class="dropDown">
-            <button onclick="onDropDownButtonClick()" class="dropButton">
+            <label class="dropDownLabel">
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
-            </button>
+                <button onclick="onDropDownButtonClick()" class="dropButton"></button>
+            </label>
             <div class="dropDownMenu">
                 <a href="products.html" class="products textSmall textLight fontInter">
                     Produkter
@@ -53,7 +54,7 @@
                 <label class="vatButton textExtraSmall">
                 Visa priser utan moms
                 <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
-                </label>
+            </label>
             </div>
             <div class="productsPage">
                 <div class="product">
