--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -6,11 +6,12 @@
             F
         </div>
         <div class="dropDown">
-            <button onclick="onDropDownButtonClick()" class="dropButton">
+            <label class="dropDownLabel">
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
                 <div class="smallDivider"></div>
-            </button>
+                <button onclick="onDropDownButtonClick()" class="dropButton"></button>
+            </label>
             <div class="dropDownMenu">
                 <a href="products.html" class="products textSmall textLight fontInter">
                     Produkter
