began with language templates

--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -4,17 +4,17 @@
                     <thead class="textMedium fontProza fontBold">
                         <tr>
                             <th>
-                                Dag
+                                !!!DAY!!!
                             </th>
                             <th>
-                                Öppettider
+                                !!!OPENING_HOURS!!!
                             </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
-                                Måndag
+                                !!!MONDAY!!!
                             </td>
                             <td>
                                 10-16
@@ -22,7 +22,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Tisdag
+                                !!!TUESDAY!!!
                             </td>
                             <td>
                                 10-16
@@ -30,7 +30,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Onsdag
+                                !!!WEDNESDAY!!!
                             </td>
                             <td>
                                 12-18
@@ -38,7 +38,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Torsdag
+                                !!!THURSDAY
                             </td>
                             <td>
                                 10-16
@@ -46,7 +46,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Fredag
+                                !!!FRIDAY!!!
                             </td>
                             <td>
                                 10-16
@@ -54,7 +54,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Lördag
+                                !!!SATURDAY!!!
                             </td>
                             <td>
                                 12-15
@@ -62,10 +62,10 @@
                         </tr>
                         <tr>
                             <td>
-                                Söndag
+                                !!!SUNDAY!!!
                             </td>
                             <td>
-                                STÄNGT
+                                !!!CLOSED!!!
                             </td>
                         </tr>
                     </tbody>
@@ -76,12 +76,12 @@
                 <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
-                <a href="about_us.html"> Om oss</a>
+                !!!ABOUT_US_LINK!!!
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
                 <div class="textMedium fontProza fontBold">
-                    Kontaktinformation
+                    !!!CONTACT_INFORMATION!!!
                 </div>
                 <p>
                     <a href="tel:+0630555555">0630 555 555</a>
