--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -13,27 +13,15 @@
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textSmall textLight fontInter">
-                    Produkter
-                </a>
-                <a href="consultation.html" class="consultation textSmall textLight fontInter">
-                    Konsultation
-                </a>
-                <a href="flowergram.html" class="flowergram textSmall textLight fontInter">
-                    Blommogram
-                </a>
+                !!!PRODUCTS_LINK!!!
+                !!!CONSULTATION_LINK!!!
+                !!!FLOWERGRAM_LINK!!!
             </div>
         </div>
         
         <div class="allServices textMedium fontProza">
-            <a href="products.html" class="products textDark fontBold">
-                Produkter
-            </a>
-            <a href="consultation.html" class="consultation textDark fontBold">
-                Konsultation
-            </a>
-            <a href="flowergram.html" class="flowergram textDark fontBold">
-                Blommogram
-            </a>
+            !!!PRODUCTS_LINK!!!
+            !!!CONSULTATION_LINK!!!
+            !!!FLOWERGRAM_LINK!!!
         </div>
     </header>
