--- a/_templates/pages/about_us.html
+++ b/_templates/pages/about_us.html
@@ -16,17 +16,17 @@
                 <div class="staffMember">
                     <img src="images/fredrik_ortqvist.jpg" alt="">
                     <p>Fredrik Örtqvist</p>
-                    <p>Ägare</p>
+                    !!!OWNER!!!
                 </div>
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
                     <p>Anna Pettersson</p>
-                    <p>Hortonom</p>
+                    <p>!!!HORTONOMA!!!</p>
                 </div>
                 <div class="staffMember">
                     <img src="images/orjan_johansson.jpg" alt="">
                     <p>Örjan Johansson</p>
-                    <p>Florist</p>
+                    <p>!!!FLORIST!!!</p>
                 </div>
             </div>
         </div>
